fix: translate glyphs before the negative y scaling to bottom align o… (#171)
* fix: translate glyphs before the negative y scaling to bottom align on baseline

* feat: descent set to 0. border around icons in preview mode

--- a/scripts/templates/base.css
+++ b/scripts/templates/base.css
@@ -10,4 +10,5 @@
 .si {
   font-style: normal;
   font-family: 'Simple Icons', sans-serif;
+  border: 1px dashed gray;
 }
